--- a/transaction-tracking-program/program/Cargo.toml
+++ b/transaction-tracking-program/program/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 [dependencies]
 borsh = "1.5.1"
 borsh-derive = "1.5.1"
-solana-program = "=1.17.25"
+solana-program = "=2.0.3"
+
+[lib]
+crate-type = ["cdylib", "lib"]
