--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "@lifi/solana-programs",
   "version": "0.0.1",
   "description": "",
-  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "exports": {
+    "./transaction-tracking": "./transaction-tracking-program/typescript-lib/index.ts"
+  },
   "author": "Lars Froelich",
   "dependencies": {
     "@solana/web3.js": "^1.95.2",
