--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,17 @@
 {
   "compilerOptions": {
     "lib": ["es2020"],
-    "module": "commonjs",
     "target": "es6",
-    "esModuleInterop": true
-  }
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true /* Generates corresponding '.d.ts' file. */,
+    "outDir": "dist", /* Redirect output structure to the directory. */
+    "baseUrl": "./",
+    "rootDir": "./",
+    "composite": true,
+    "noEmitOnError": false,
+  },
+  "exclude": ["dist"]
 }
