--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "require": "./dist/index.js",
     "import": "./dist/index.js"
   },
+  "module": "./dist/index.js",
   "dependencies": {
     "@solana/web3.js": "^1.95.0",
     "borsher": "^3.5.0",
