--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Lars Froelich",
   "exports": {
     "require": "./dist/index.js",
-    "import": "./dist/index.js"
+    "import": "./dist/index.js",
+    "default": "./dist/index.js",
+    "types": "./dist/index.d.ts"
   },
   "module": "./dist/index.js",
   "dependencies": {
