--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "buffer": "^6.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@jest/globals": "^29.7.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.1.0",
+    "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.5.0"
   },
   "private": true
 }
