--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,9 +28,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 8.12
+          run_install: false
       - name: Setup .npmrc file to publish to npm
         uses: actions/setup-node@v4
         with:
+          cache: 'pnpm'
           node-version: lts/*
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
