--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -40,9 +40,11 @@ jobs:
           node-version: lts/*
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm build
+      - name: Test
+        run: pnpm test
       - name: Publish to npm
         run: |
           pnpm publish --access public \
