--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@lifi/solana-programs",
   "version": "0.1.6",
   "description": "",
+  "type": "module",
   "keywords": [],
   "author": "Lars Froelich",
   "exports": {
@@ -22,7 +23,7 @@
     "build:esm": "tsc --project ./tsconfig.json --module es2015 --outDir ./dist/_esm && printf '{\"type\": \"module\",\"sideEffects\":false}' > ./dist/_esm/package.json && eslint --fix --cache .",
     "build:types": "tsc --project ./tsconfig.json --module esnext --declarationDir ./dist/_types --emitDeclarationOnly --declaration --declarationMap && eslint --fix --cache .",
     "clean": "rm -rf dist tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
-    "test": "jest",
+    "test": "vitest",
     "lint:fix": "eslint . --fix --ext .ts",
     "lint:fix:cached": "eslint . --cache --fix --ext .ts"
   },
@@ -34,16 +35,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
-    "@jest/globals": "^29.7.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.1.0",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^29.7.0",
     "prettier": "3.3.3",
-    "ts-jest": "^29.2.5",
     "typescript": "5.5.4",
-    "typescript-eslint": "^8.5.0"
+    "typescript-eslint": "^8.5.0",
+    "vitest": "^2.1.5"
   }
 }
