--- a/package.json
+++ b/package.json
@@ -48,5 +48,6 @@
     "typescript": "5.5.4",
     "typescript-eslint": "^8.5.0",
     "vitest": "^2.1.5"
-  }
+  },
+  "files": ["dist/**", "lifi-solana-program-1/ts/**"]
 }
