--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "typescript-eslint": "^8.5.0",
     "vitest": "^2.1.5"
   },
-  "files": ["dist/**", "lifi-solana-program-1/ts/**"]
+  "files": [
+    "dist/**",
+    "lifi-solana-program-1/ts/**"
+  ],
+  "packageManager": "pnpm@9.14.2"
 }
