--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lifi/solana-programs",
-  "version": "0.1.10",
+  "version": "0.1.11-alpha.0",
   "description": "",
   "type": "module",
   "keywords": [],
